--- a/style.css
+++ b/style.css
@@ -55,13 +55,14 @@ main{
 }
 .card{
     display: flex;
-    border: 1px solid #41B883;
     padding: 2em 0;
 }
 .doneFalse{
+    border: 1px solid #41B883;
     border-top: 10px solid #41B883;
 }
 .doneTrue{
+    border: 1px solid #34495E;
     border-top: 10px solid #34495E;
     color: #34495E;
 }
